# round_mult

./: Cargo.toml  README.md  build.rs
benches/: bench.rs
src/: lib.rs  nzp.rs
src/nzp/: mod.rs  std_simd.rs
src/traits/: mod.rs  multiplier.rs  nonzero.rs  number.rs
